--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@testing-library/user-event": "12.6.2",
     "chalk": "4.1.0",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-icon": "1.0.0",
+    "react-icons": "5.0.1"
   },
   "devDependencies": {
     "eslint-config-airbnb": "18.2.1",
@@ -22,7 +24,8 @@
     "lint-staged": "10.5.4",
     "npm-run-all": "4.1.5",
     "prettier": "2.2.1",
-    "react-scripts": "4.0.3"
+    "react-scripts": "4.0.3",
+    "tailwindcss": "3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
